Cleaning the build, making MCP smarter when handling very large sql files